--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -33,9 +33,6 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat", sans-serif;
-  font-weight: 400;
-  margin: 0 0 20px 0;
-  padding: 0;
 }
 
 /*--------------------------------------------------------------
@@ -400,7 +397,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (min-width: 992px) {
   #hero .intro-info {
-    padding-top: 100px;
+
   }
 }
 
@@ -1578,3 +1575,15 @@ section {
 #footer .credits a:hover {
   color: #0a98c0;
 }
+/*--------------------------------------------------------------
+# Highlights
+--------------------------------------------------------------*/
+#highlights {
+    
+}
+
+#highlights .carousel-caption {
+    background-color: #00000070;
+    border-radius: 8px;
+}
+
