--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -362,9 +362,9 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
   position: relative;
   padding-top: 160px;
+  padding-bottom: 160px;
 }
 
 #hero:before {
