--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1610,6 +1610,7 @@ section {
 --------------------------------------------------------------*/
 .product-card:hover {
     cursor: pointer;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
 }
 .empty-product-card {
     min-height: 200px;
