Search result view.

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -361,6 +361,10 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
 }
 
+.nav-icon {
+    margin-right: 8px;
+}
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
