--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -156,6 +156,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.social-icon {
+    font-size: 1.5em;
+}
+
 /*--------------------------------------------------------------
 # Navigation Menu
 --------------------------------------------------------------*/
