--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -80,6 +80,11 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
+#products-search-container {
+    display: none;
+    margin-bottom: 0 !important;
+    margin-right: 12px;
+}
 #header {
   background: #fff;
   transition: all 0.5s;
