--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -85,6 +85,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0 !important;
     margin-right: 12px;
 }
+#products-search-results-list {
+    padding: 0;
+    border: none;
+    margin-top: -18px;
+}
 #header {
   background: #fff;
   transition: all 0.5s;
