--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -89,6 +89,8 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     border: none;
     margin-top: -18px;
+    max-height: calc(100vh - 100px);
+    overflow-y: auto;
 }
 #header {
   background: #fff;
