--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1634,6 +1634,9 @@ section {
 .accordion-button-leaf:after {
     background-image: none !important;
 }
+.accordion-button-leaf {
+    font-weight: 400;
+}
 .catalog-body {
     padding: 0;
 }
