--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1601,15 +1601,14 @@ section {
 # Highlights
 --------------------------------------------------------------*/
 #highlights {
-    
+    margin: 1rem;
+    height: 100%;
+    width: auto;
 }
-
 #highlights .carousel-caption {
     background-color: #00000070;
     border-radius: 8px;
 }
-
-
 /*--------------------------------------------------------------
 # Catalog
 --------------------------------------------------------------*/
