--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1602,12 +1602,15 @@ section {
 --------------------------------------------------------------*/
 #highlights {
     margin: 1rem;
-    height: 100%;
-    width: auto;
 }
 #highlights .carousel-caption {
     background-color: #00000070;
     border-radius: 8px;
+}
+@media (min-width: 992px) {
+    #highlights {
+        max-width: calc(100vh - 450px);
+    }
 }
 /*--------------------------------------------------------------
 # Catalog
