--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1651,7 +1651,7 @@ section {
     padding-top: 100%;
 }
 .page-link, .page-item {
-    color: #0dcaf0;
+    color: #444;
 }
 .page-item.active .page-link {
     background-color: #0dcaf0;
@@ -1701,5 +1701,16 @@ section {
     background-image: url("data:image/svg+xml,%3Csvg aria-hidden='true' focusable='false' data-prefix='fas' data-icon='chevron-up' class='svg-inline--fa fa-chevron-up fa-w-12' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%236c757d' d='M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z'%3E%3C/path%3E%3C/svg%3E");
     background-size: 50% 50%;
     background-position: center center;
+}
+.products-catalog-tree .accordion-button {
+    font-weight: bold;
+    color: #6c757d;
+}
+.products-catalog-tree .accordion-item {
+    font-weight: bold;
+    color: #6c757d;
+}
+.products-catalog-tree .fw-bold {
+    color: #212529;
 }
 
