--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -39,6 +39,12 @@ section {
     padding-top: 200px;
 }
 
+@media (max-width: 992px) {
+    section {
+        padding-top: 100px;
+    }
+}
+
 /*--------------------------------------------------------------
 # Back to top button
 --------------------------------------------------------------*/
@@ -93,11 +99,11 @@ section {
   background: #fff;
   transition: all 0.5s;
   z-index: 997;
-  height: 160px;
+  height: 140px;
 }
 
 #header.header-transparent {
-  background: transparent;
+    background: transparent;
 }
 
 #header.header-scrolled {
