--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1028,7 +1028,7 @@ section {
 }
 
 /** Product details. */
-.product-image {
+.agr-product-image-details {
     display: block;
     background-size: cover;
     background-repeat: no-repeat;
