Home page design.

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1157,4 +1157,8 @@ section {
     justify-content: center;
     margin-right: 10px;
 }
+.agr-highlight-img {
+    max-width: 100%;
+    height: auto;
+}
 
