--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1039,6 +1039,12 @@ section {
     cursor: pointer;
     box-shadow: rgb(0 0 0 / 20%) 0px 3px 3px -2px, rgb(0 0 0 / 14%) 0px 3px 4px 0px, rgb(0 0 0 / 12%) 0px 1px 8px 0px !important;
 }
+.product-card {
+    font-family: "Open Sans", sans-serif;
+}
+.product-card.mini h6 {
+    font-size: .8rem;
+}
 .product-image {
     display: block;
     background-size: cover;
