--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1053,6 +1053,9 @@ section {
     height: 0;
     padding-top: 100%;
 }
+.product-card.mini > .product-image {
+    padding-top: 80% !important;
+}
 .products-search-result .product-description {
     max-width: 600px;
     text-overflow: ellipsis;
