--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -1074,6 +1074,7 @@ section {
     margin-top: 0px;
     max-height: calc(100vh - 100px);
     overflow-y: auto;
+    z-index: 9999;
 }
 #products-search:focus {
     color: var(--palette-primary-color);
@@ -1169,5 +1170,10 @@ section {
 .agr-highlight-img {
     max-width: 100%;
     height: auto;
+}
+.agr-product-search-link button:active {
+    color: inherit !important;
+    text-decoration: inherit !important;
+    background-color: #f5f5f5;
 }
 
