--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -19,13 +19,13 @@ and open the template in the editor.
 }
 
 .carousel-item:nth-child(1) {
-    background-image: url('/assets/img/home-bg.jpg');
+    background-image: url('/assets/img/intro/catalog.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
 }
 .carousel-item:nth-child(2) {
-    background-image: url('https://mdbootstrap.com/img/Photos/Others/images/77.jpg');
+    background-image: url('/assets/img/intro/discount.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -38,15 +38,13 @@ and open the template in the editor.
 }
 
 /* Height for devices larger than 576px */
-@media (min-width: 992px) {
-    #introCarousel {
-        margin-top: -58.59px;
-    }
-    #introCarousel,
-    .carousel-inner,
-    .carousel-item,
-    .carousel-item.active {
-        height: 50vh;
-    }
+#introCarousel {
+    margin-top: -58.59px;
+}
+#introCarousel,
+.carousel-inner,
+.carousel-item,
+.carousel-item.active {
+    height: 50vh;
 }
 
