--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -93,4 +93,12 @@ and open the template in the editor.
     border-color: white;
     box-shadow: 0 0 0 3px rgb(121 82 179 / 25%);
 }
+.agr-card-image {
+    display: block;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 0;
+    padding-top: 100%;
+}
 
