--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -101,4 +101,23 @@ and open the template in the editor.
     height: 0;
     padding-top: 100%;
 }
+.agr-bg-dark {
+    background-color: #00000085;
+}
+.agr-bg-dark .container-fluid {
+    z-index: 5000;
+}
+.agr-bg-dark:before {
+    content: "";
+    background-image: url('/assets/img/intro/catalog.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    opacity: .1;
+}
 
