--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -67,7 +67,7 @@ and open the template in the editor.
     }
 }
 
-#products-search-results-list, #agr-quick-search-result-mobile {
+#agr-quick-search-result-desktop, #agr-quick-search-result-mobile {
     padding: 0;
     margin-top: 0px;
     max-height: calc(100vh - 100px);
@@ -75,19 +75,19 @@ and open the template in the editor.
     z-index: 9999;
     width: 100%;
 }
-#products-search-results-list h6, #agr-quick-search-result-mobile h6 {
+#agr-quick-search-result-desktop h6, #agr-quick-search-result-mobile h6 {
     max-width: 400px;
     white-space: pre-line;
     font-size: .9rem;
 }
-#products-search-results-list .text-muted, #agr-quick-search-result-mobile .text-muted {
+#agr-quick-search-result-desktop .text-muted, #agr-quick-search-result-mobile .text-muted {
     font-size: .8rem;
 }
-#products-search-results-list .highlighted-text, #agr-quick-search-result-mobile .highlighted-text {
+#agr-quick-search-result-desktop .highlighted-text, #agr-quick-search-result-mobile .highlighted-text {
     color: var(--bs-purple);
     background-color: rgba(121,82,179,.07);
 }
-#products-search:focus, #agr-quick-search-input-mobile:focus {
+#agr-quick-search-input-desktop:focus, #agr-quick-search-input-mobile:focus {
     color: var(--bs-purple);
     border-color: white;
     box-shadow: 0 0 0 3px rgb(121 82 179 / 25%);
