--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -127,3 +127,54 @@ and open the template in the editor.
 #footer {
     background-color: var(--agr-background-color) !important;
 }
+/** ============================================== RIBBON ============================================================================== */
+.ribbon {
+    z-index: 3000;
+    width: 120px;
+    height: 120px;
+    overflow: hidden;
+    position: absolute;
+}
+.ribbon::before,
+.ribbon::after {
+    position: absolute;
+    z-index: -1;
+    content: '';
+    display: block;
+    border: 1px solid #2980b9;
+}
+.ribbon span {
+    position: absolute;
+    display: block;
+    width: 192px;
+    padding: 5px 0;
+    box-shadow: 0 5px 10px rgba(0,0,0,.1);
+    color: #fff;
+    text-shadow: 0 1px 1px rgba(0,0,0,.2);
+    text-align: center;
+    font-weight: bold;
+}
+
+/* top left*/
+.ribbon-top-left {
+    top: -4px;
+    left: -4px;
+}
+.ribbon-top-left::before,
+.ribbon-top-left::after {
+    border-top-color: transparent;
+    border-left-color: transparent;
+}
+.ribbon-top-left::before {
+    top: 0;
+    right: 0;
+}
+.ribbon-top-left::after {
+    bottom: 0;
+    left: 0;
+}
+.ribbon-top-left span {
+    right: -25px;
+    top: 30px;
+    transform: rotate(-45deg);
+}
