--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -67,6 +67,9 @@ and open the template in the editor.
 }
 
 @media (max-width: 992px) {
+    h5 {
+        font-size: 1rem;
+    }
     main:not(#home) {
         margin-top: 140px;
     }
