--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -68,13 +68,16 @@ and open the template in the editor.
 
 @media (max-width: 992px) {
     h5 {
-        font-size: 1rem;
-    }
-    h6 {
         font-size: .9rem;
     }
+    h6 {
+        font-size: .8rem;
+    }
     button[data-product-id] {
-        font-size: .7rem;
+        font-size: .6rem;
+    }
+    .row {
+        --bs-gutter-x: 1rem;
     }
     main:not(#home) {
         margin-top: 140px;
