--- a/src/main/resources/static/assets/css/style-mb.css
+++ b/src/main/resources/static/assets/css/style-mb.css
@@ -173,6 +173,9 @@ and open the template in the editor.
 .agr-product-search-link {
     border-bottom: 1px solid #ececec;
 }
+.agr-product-not-available {
+    
+}
 #footer {
     background-color: var(--agr-background-color) !important;
 }
